--- a/css/style1.css
+++ b/css/style1.css
@@ -1,49 +1,11 @@
-@font-face {
-	font-family: 'icomoon';
-	src: url('../fonts/meteocons/icomoon.eot?26rom9');
-	src: url('../fonts/meteocons/icomoon.eot?26rom9#iefix') format('embedded-opentype'), url('../fonts/meteocons/icomoon.ttf?26rom9') format('truetype'), url('../fonts/meteocons/icomoon.woff?26rom9') format('woff'), url('../fonts/meteocons/icomoon.svg?26rom9#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 
-.icon {
-	font-family: 'icomoon';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
 
-.icon--radioactive:before {
-	content: "\e905";
-}
-
-.icon--sun:before {
-	content: "\e900";
-}
-
-.icon--drizzle:before {
-	content: "\e902";
-}
-
-.icon--rainy:before {
-	content: "\e903";
-}
-
-.icon--storm:before {
-	content: "\e906";
-}
 
 .slideshow {
 	position: relative;
 	height: 100vh;
 	width: 100vw;
-	background: url(../img/city.jpg) no-repeat center top;
+	background: url(../img/1.jpg) no-repeat center top;
 	background-size: cover;
 	overflow: hidden;
 }
